--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "hexlet/code",
-    "description": "calculate diferencies",
+    "description": "calculate differencies",
     "autoload": {
         "files": [
             "src/Differ/genDiff.php"
