--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "lstrojny/functional-php": "^1.17"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.8"
+        "squizlabs/php_codesniffer": "^3.8",
+        "phpunit/phpunit": "^10.5"
     }
 }
