--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,3 +37,11 @@ jobs:
 
     - name: Run test suite
       run: make test
+    - name: Code Climate
+      run: make test
+    - name: Publish code coverage
+      uses: paambaati/codeclimate-action@v5.0.0
+      env:
+        CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+      with:
+        coverageCommand: make test-coverage
