Update php.yml second try

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -45,3 +45,4 @@ jobs:
         CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
       with:
         coverageCommand: make test-coverage
+        debug: true
