--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "calculate differencies",
     "autoload": {
         "files": [
-            "src/Processing.php",
-            "src/Differ/Differ.php"
+            "src/Parsers.php",
+            "src/Differ.php"
         ]
     },
     "license": "MIT",
@@ -16,7 +16,8 @@
     ],
     "require": {
         "docopt/docopt": "^1.0",
-        "lstrojny/functional-php": "^1.17"
+        "lstrojny/functional-php": "^1.17",
+        "symfony/yaml": "^7.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8",
