--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         ]
     },
     "license": "MIT",
+    "bin": [
+        "bin/gendiff"
+    ],
     "authors": [
         {
             "name": "Vladimir",
