--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "docopt/docopt": "^1.0",
         "lstrojny/functional-php": "^1.17",
-        "symfony/yaml": "^7.0"
+        "symfony/yaml": "6.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8",
