--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "autoload": {
         "files": [
             "src/Parsers.php",
-            "src/Differ.php"
+            "src/Differ.php",
+            "src/DifferNew.php"
         ]
     },
     "license": "MIT",
