first working version for 6th step without tests

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "files": [
             "src/Parsers.php",
             "src/Differ.php",
-            "src/DifferNew.php"
+            "src/stylish.php"
         ]
     },
     "license": "MIT",
