first try to solve plain

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "files": [
             "src/Parsers.php",
             "src/Differ.php",
-            "src/stylish.php"
+            "src/stylish.php",
+            "src/Formatters/plain.php"
         ]
     },
     "license": "MIT",
