added working version of 7th step

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
             "src/Differ.php",
             "src/Formatters.php",
             "src/Formatters/stylish.php",
-            "src/Formatters/plain.php"
+            "src/Formatters/plain.php",
+            "src/Formatters/json.php"
         ]
     },
     "license": "MIT",
