moduls starts with capital letters

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
             "src/Parsers.php",
             "src/Differ.php",
             "src/Formatters.php",
-            "src/Formatters/stylish.php",
-            "src/Formatters/plain.php"
+            "src/Formatters/Stylish.php",
+            "src/Formatters/Plain.php"
         ]
     },
     "license": "MIT",
