--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
             "src/Differ.php",
             "src/Formatters.php",
             "src/Formatters/Stylish.php",
-            "src/Formatters/Plain.php"
+            "src/Formatters/Plain.php",
+            "src/Formatters/Json.php"
         ]
     },
     "license": "MIT",
