--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "calculate differencies",
     "autoload": {
         "files": [
-            "src/FilesProcessing.php",
+            "src/FileProcessing.php",
             "src/Parsers.php",
             "src/Differ.php",
             "src/Formatters.php",
